[package]
name = "crossplane-types"
version = "0.1.0"
description = "TODO"
edition = "2021"
license = "Apache"
authors = ["Shuttle <engineering@shuttle.dev>"]
categories = ["api-bindings"]
keywords = ["crossplane", "kubernetes", "aws", "cloud"]

readme = "README.md"
homepage = "https://docs.rs/crate/crossplane-types/"
repository = "https://github.com/shuttle-hq/crossplane-types-rs"


[dependencies]
k8s-openapi = { version = "0.24", default-features = false, features = [
    "schemars",
    "v1_32",
] }
kube = { version = "0.99", default-features = false, features = ["derive"] }
schemars = "1.0.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
typed-builder = "0"

[features]
default = []
aws-accessanalyzer = []
aws-account = []
aws-acm = []
aws-acmpca = []
aws-amp = []
aws-amplify = []
aws-apigateway = []
aws-apigatewayv2 = []
aws-appautoscaling = []
aws-appconfig = []
aws-appflow = []
aws-appintegrations = []
aws-applicationinsights = []
aws-appmesh = []
aws-apprunner = []
aws-appstream = []
aws-appsync = []
aws-athena = []
aws-autoscaling = []
aws-autoscalingplans = []
aws-backup = []
aws-batch = []
aws-bedrock = []
aws-bedrockagent = []
aws-budgets = []
aws-ce = []
aws-chime = []
aws-cloud9 = []
aws-cloudcontrol = []
aws-cloudformation = []
aws-cloudfront = []
aws-cloudsearch = []
aws-cloudtrail = []
aws-cloudwatch = []
aws-cloudwatchevents = []
aws-cloudwatchlogs = []
aws-codeartifact = []
aws-codecommit = []
aws-codeguruprofiler = []
aws-codepipeline = []
aws-codestarconnections = []
aws-codestarnotifications = []
aws-cognitoidentity = []
aws-cognitoidp = []
aws-configservice = []
aws-connect = []
aws-cur = []
aws-dataexchange = []
aws-datapipeline = []
aws-datasync = []
aws-dax = []
aws-deploy = []
aws-detective = []
aws-devicefarm = []
aws-directconnect = []
aws-dlm = []
aws-dms = []
aws-docdb = []
aws-ds = []
aws-dynamodb = []
aws-ec2 = []
aws-ecr = []
aws-ecrpublic = []
aws-ecs = []
aws-efs = []
aws-eks = []
aws-elasticache = []
aws-elasticbeanstalk = []
aws-elasticsearch = []
aws-elastictranscoder = []
aws-elb = []
aws-elbv2 = []
aws-emr = []
aws-emrserverless = []
aws-evidently = []
aws-firehose = []
aws-fis = []
aws-fsx = []
aws-gamelift = []
aws-glacier = []
aws-globalaccelerator = []
aws-glue = []
aws-grafana = []
aws-guardduty = []
aws-iam = []
aws-identitystore = []
aws-imagebuilder = []
aws-inspector = []
aws-inspector2 = []
aws-iot = []
aws-ivs = []
aws-kafka = []
aws-kafkaconnect = []
aws-kendra = []
aws-keyspaces = []
aws-kinesis = []
aws-kinesisanalytics = []
aws-kinesisanalyticsv2 = []
aws-kinesisvideo = []
aws-kms = []
aws-lakeformation = []
aws-lambda = []
aws-lexmodels = []
aws-licensemanager = []
aws-lightsail = []
aws-location = []
aws-macie2 = []
aws-mediaconvert = []
aws-medialive = []
aws-mediapackage = []
aws-mediastore = []
aws-memorydb = []
aws-mq = []
aws-mwaa = []
aws-neptune = []
aws-networkfirewall = []
aws-networkmanager = []
aws-opensearch = []
aws-opensearchserverless = []
aws-opsworks = []
aws-organizations = []
aws-osis = []
aws-pinpoint = []
aws-pipes = []
aws-qldb = []
aws-quicksight = []
aws-ram = []
aws-rds = []
aws-redshift = []
aws-redshiftserverless = []
aws-resourcegroups = []
aws-rolesanywhere = []
aws-route53 = []
aws-route53recoverycontrolconfig = []
aws-route53recoveryreadiness = []
aws-route53resolver = []
aws-rum = []
aws-s3 = []
aws-s3control = []
aws-sagemaker = []
aws-scheduler = []
aws-schemas = []
aws-secretsmanager = []
aws-securityhub = []
aws-serverlessrepo = []
aws-servicecatalog = []
aws-servicediscovery = []
aws-servicequotas = []
aws-ses = []
aws-sesv2 = []
aws-sfn = []
aws-signer = []
aws-simpledb = []
aws-sns = []
aws-sqs = []
aws-ssm = []
aws-ssoadmin = []
aws-swf = []
aws-timestreamwrite = []
aws-transcribe = []
aws-transfer = []
aws-vpc = []
aws-waf = []
aws-wafregional = []
aws-wafv2 = []
aws-workspaces = []
aws-xray = []