[workspace]
resolver = "2"
exclude = [
    "crates",
]
members = [
    "crossplane-types-generator",
]

[workspace.package]
publish = true
version = "0.2.0"
edition = "2024"
license = "Apache"
categories = ["api-bindings"]
authors = ["Shuttle <engineering@shuttle.dev>"]
keywords = ["crossplane", "kubernetes", "aws", "gcp", "cloud"]
repository = "https://github.com/shuttle-hq/crossplane-types-rs"

[workspace.lints.rust]
unsafe_code = "forbid"
unknown_lints = "allow"
rust_2018_idioms = { level = "deny", priority = -1 }

# TODO(the-wondersmith): remove patch when `https://github.com/kube-rs/kopium/pull/347` is merged
[patch.crates-io]
kopium = { git = "https://github.com/the-wondersmith/kopium.git", branch = "wip/continuing-improvements" }

# NOTE: `workspace.dependencies` should ONLY contain dependencies for generated crates, as
# the table is effectively just transcribed wholesale to the manifest of each generated crate
[workspace.dependencies]
k8s-openapi = { version = "0.25", default-features = false, features = ["schemars"] }
kube = { version = "1.1.0", default-features = false, features = ["derive"] }
schemars = { version = "0.8.22", default-features = false, features = [
    "chrono",
    "derive",
] }
serde = { version = "1", default-features = false, features = ["derive"] }
serde_json = { version = "1", default-features = false }
# typed-builder = { version = "0", default-features = false }
